--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2 id="demo"></h2>
       <div id="cards"></div>
       <p>score <span id="score"></span></p>
-      <div id=" actions">
+      <div class="actions">
         <button onclick="restart()">restart</button>
       </div>
     </center>
